--- a/datascience-workbooks/numpy/numpy_basics-02-넘파이_배열.ipynb
+++ b/datascience-workbooks/numpy/numpy_basics-02-넘파이_배열.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "30e4b68667aa90e7",
    "metadata": {
     "ExecuteTime": {
@@ -32,29 +32,37 @@
       "(1, 2, 3, 4, 5) <class 'tuple'>\n",
       "\n",
       "[1 2 3 4 5] <class 'numpy.ndarray'>\n",
-      "[1 2 3 4 5] <class 'numpy.ndarray'>\n"
+      "[1 3 5 7] <class 'numpy.ndarray'>\n",
+      "[1 2 3 4 5] <class 'numpy.ndarray'>\n",
+      "[1 3 5 7 9] <class 'numpy.ndarray'>\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 파이썬 기본 리스트\n",
-    "lst1 = [1, 2, 3, 4, 5]   \n",
+    "# 파이썬 기본 리스트 => []\n",
+    "lst1 = [1,2,3,4,5]\n",
     "print(lst1, type(lst1))\n",
     "\n",
-    "# 파이썬 튜플\n",
+    "# 파이썬 튜플 => ()\n",
     "tpl = 1, 2, 3, 4, 5    \n",
     "print(tpl, type(tpl))\n",
     "print()\n",
     "\n",
-    "# 리스트를 이용한 넘파이 배열 생성\n",
+    "# 넘파이 배열 => np.array\n",
+    "\n",
+    "# 리스트를 이용한 넘파이 배열 생성 \n",
     "arr1 = np.array([1, 2, 3, 4, 5])    \n",
     "print(arr1, type(arr1))\n",
+    "ar = np.array([1,3,5,7])\n",
+    "print(ar,type(ar))\n",
     "\n",
     "# 튜플을 이용한 넘파이 배열 생성\n",
     "arr2 = np.array((1, 2, 3, 4, 5))    \n",
-    "print(arr2, type(arr2))"
+    "print(arr2, type(arr2))\n",
+    "ar2 = np.array((1,3,5,7,9))\n",
+    "print(ar2, type(ar2))"
    ]
   },
   {
@@ -67,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "33fd523dfad930ac",
    "metadata": {
     "ExecuteTime": {
@@ -82,6 +90,8 @@
      "text": [
       "range(0, 10)\n",
       "[0 1 2 3 4 5 6 7 8 9]\n",
+      "range(0, 9)\n",
+      "[0 1 2 3 4 5 6 7 8]\n",
       "\n",
       "range(2, 10)\n",
       "[2 3 4 5 6 7 8 9]\n",
@@ -95,23 +105,23 @@
     "import numpy as np\n",
     "\n",
     "# 0부터 10 이전까지\n",
-    "lst = range(10) \n",
-    "print(lst)\n",
-    "arr = np.arange(10)\n",
-    "print(arr)\n",
+    "lst = range(10)      # range(a) \n",
+    "print(lst)        \n",
+    "arr = np.arange(10)  # np.arange(a) \n",
+    "print(arr)      \n",
     "print()\n",
     "\n",
     "# 2부터 10 이전까지\n",
-    "lst2 = range(2, 10) \n",
+    "lst2 = range(2, 10) # range(a,b) \n",
     "print(lst2)\n",
-    "arr2 = np.arange(2, 10)\n",
+    "arr2 = np.arange(2, 10) # np.arange(a,b)\n",
     "print(arr2)\n",
     "print()\n",
     "\n",
     "# 0부터 10 이전까지 2간격으로\n",
-    "lst3 = range(0, 10, 2)  \n",
+    "lst3 = range(0, 10, 2)  # np.range(a,b,c)\n",
     "print(lst3)\n",
-    "arr3 = np.arange(0, 10, 2)\n",
+    "arr3 = np.arange(0, 10, 2) # np.arange(a,b,c)\n",
     "print(arr3)"
    ]
   },
@@ -169,14 +179,14 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 영행렬\n",
+    "# 영행렬 np.zeros(n)\n",
     "zeros3 = np.zeros(3)  # 3개의 요소가 모두 0인 1차원 배열 \n",
     "print(zeros3)\n",
     "zeros3x3 = np.zeros((3, 3)) # 3x3 형태의 모든 요소가 0인 2차원 배열\n",
     "print(zeros3x3)\n",
     "print()\n",
     "\n",
-    "# 모든 원소가 1인 행렬\n",
+    "# 모든 원소가 1인 행렬 np.ones(n)\n",
     "ones3 = np.ones(3) # 3개의 요소가 모두 1인 1차원 배열\n",
     "print(ones3)\n",
     "ones3x3 = np.ones((3, 3)) # 3x3 형태의 모든 요소가 1인 2차원 배열\n",
@@ -184,11 +194,11 @@
     "print()\n",
     "\n",
     "# 3차원 배열\n",
-    "ones3x3x3 = np.ones((3, 3, 3))  # 3x3x3 형태의 모든 요소가 1인 3차원 배열\n",
+    "ones3x3x3 = np.ones((3, 3, 3))  # 3x3  x3 형태의 모든 요소가 1인 3차원 배열\n",
     "print(ones3x3x3)\n",
     "print()\n",
     "\n",
-    "# 모든 원소가 3인 행렬\n",
+    "# 모든 원소가 3인 행렬 np.full((x,y), n)\n",
     "three3x3 = np.full((3, 3), 3)  # 3x3 형태의 모든 요소가 3인 2차원 배열\n",
     "print(three3x3)"
    ]
@@ -204,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "615d03f9",
    "metadata": {
     "ExecuteTime": {
@@ -217,7 +227,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3x3 단위행렬: [[1. 0. 0.]\n",
+      "3x3 단위행렬:=\n",
+      " [[1. 0. 0.]\n",
       " [0. 1. 0.]\n",
       " [0. 0. 1.]]\n",
       "\n",
@@ -238,7 +249,7 @@
     "\n",
     "# 단위항렬 : eye\n",
     "eye = np.eye(3) #   3x3의 행렬에서 주대각선상의 원소가 모두 1인 행렬\n",
-    "print(\"3x3 단위행렬:\", eye)\n",
+    "print(\"3x3 단위행렬:=\\n\", eye)\n",
     "print()\n",
     "\n",
     "eye2 = np.eye(3, k= -1)  # k: 주 대각선을 위, 아래로 얼마나 이동시킬 것인지 결정\n",
@@ -298,17 +309,17 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 균일분포 난수 배열\n",
+    "# 균일분포 난수 배열 np.random.rand(x,y)\n",
     "uni_rand = np.random.rand(4, 3) # 4x3 배열 생성 (랜덤)\n",
     "print(uni_rand)\n",
     "print()\n",
     "\n",
-    "# 정규분포 난수 배열\n",
+    "# 정규분포 난수 배열 np.random.randn(x,y)\n",
     "norm_rand = np.random.randn(4, 3) # 4x3 배열 생성\n",
     "print(norm_rand)\n",
     "print()\n",
     "\n",
-    "# 정수 난수 배열\n",
+    "# 정수 난수 배열 np.random.randint(a,b, size=(x,y))\n",
     "int_rand = np.random.randint(1, 10, size=(4, 3))  # 1부터 9까지의 정수 난수로 4x3 배열 생성\n",
     "print(int_rand)"
    ]
@@ -359,17 +370,17 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 균등분포 난수\n",
+    "# 균등분포 난수 np.random.uniform(a,b, size=(x,y))\n",
     "uni_rand = np.random.uniform(1, 6, size=(4, 3)) # 0과 1 사이의 균등분포 난수로 4x3 배열 생성\n",
     "print(uni_rand)\n",
     "print()\n",
     "\n",
-    "# 정규분포 난수\n",
+    "# 정규분포 난수 np.random.normal(loc=a, scale=b, size=(x,y))\n",
     "norm_rand = np.random.normal(loc=0.0, scale=1.0, size=(4, 3)) # 평균 0, 표준편차 1인 정규분포 난수로 4x3 배열 생성\n",
     "print(norm_rand)\n",
     "print()\n",
     "\n",
-    "# 지수분포 난수\n",
+    "# 지수분포 난수 np.random.exponential(scale=a, size=(x,y))\n",
     "exp_rand = np.random.exponential(scale=1., size=(4,3))  # 스케일 1인 지수분포 난수로 4x3 배열 생성\n",
     "print(exp_rand)"
    ]
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "cd51539e9d585ad4",
    "metadata": {
     "ExecuteTime": {
@@ -399,7 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1, 4, 6, 1, 5, 6, 2, 1, 1, 2, \n",
+      "5, 3, 5, 5, 2, 3, 3, 3, 5, 4, \n",
       "4, 4, 4, 4, 4, 4, 4, 4, 4, 4, "
      ]
     }
@@ -407,13 +418,13 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 일반적인 난수의 사용\n",
+    "# 일반적인 난수의 사용 range(), np.random.randint() 활용\n",
     "for i in range(10):\n",
     "    print(np.random.randint(1, 7), end=\", \")\n",
     "else:\n",
     "    print()\n",
     "    \n",
-    "# seed 설정을 이용한 재현성의 확보\n",
+    "# seed 설정을 이용한 재현성의 확보 np.random.seed\n",
     "for i in range(10):\n",
     "    np.random.seed(42) # 시드 지정\n",
     "    print(np.random.randint(1, 7), end=\", \")"
@@ -503,16 +514,16 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# 0 ~ 9 사이의 난수를 가진 4행 3열 배열 생성\n",
+    "# 0 ~ 9 사이의 난수를 가진 4행 X3열 배열 생성\n",
     "arr = np.random.randint(0, 10, size=(4, 3))\n",
     "print(arr)\n",
     "print()\n",
     "\n",
     "# 배열의 속성을 알아봅시다\n",
-    "print(\"형상 shape:\", np.shape(arr), arr.shape)\n",
-    "print(\"차원 ndim:\", np.ndim(arr), arr.ndim)\n",
-    "print(\"원소 개수 size:\", np.size(arr), arr.size)\n",
-    "print(\"데이터 타입 dtype:\", arr.dtype)"
+    "print(\"형상 shape:\", np.shape(arr), arr.shape)  #np.shape(), .shape 형상\n",
+    "print(\"차원 ndim:\", np.ndim(arr), arr.ndim)     #np.ndim(), .ndim 차원\n",
+    "print(\"원소 개수 size:\", np.size(arr), arr.size)#np.size(), .size 원소개수\n",
+    "print(\"데이터 타입 dtype:\", arr.dtype)          #.dtype  데이터타입"
    ]
   },
   {
@@ -601,18 +612,18 @@
    ],
    "source": [
     "# 3행 2열의 데이터는 무엇인가?\n",
-    "print(arr[3, 2])\n",
+    "print(arr[3, 2]) #0부터 count잊지말자\n",
     "print()\n",
     "\n",
-    "# 2행 전체의 데이터를 추출해 보자\n",
-    "print(arr[2])\n",
+    "# 2행 전체의 데이터를 추출해 보자 # arr[x행]\n",
+    "print(arr[2]) \n",
     "print()\n",
     "\n",
-    "# 2열 전체의 데이터를 추출해 보자\n",
+    "# 2열 전체의 데이터를 추출해 보자 # arr[ :y열]\n",
     "print(arr[:, 2])\n",
     "print()\n",
     "\n",
-    "# 1행 1열 ~ 3행 3열의 데이터를 추출해 보자\n",
+    "# 1행 1열 ~ 3행 3열의 데이터를 추출해 보자 # arr[x:y, x:y]\n",
     "print(arr[1:4, 1:4])"
    ]
   },
@@ -634,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d9c694e6df662589",
    "metadata": {
     "ExecuteTime": {
@@ -661,7 +672,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 24\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m     23\u001b[0m arr5 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m])  \u001b[38;5;66;03m# Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\u001b[39;00m\n\u001b[1;32m---> 24\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43marr3\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43marr5\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "Cell \u001b[1;32mIn[14], line 25\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\u001b[39;00m\n\u001b[0;32m     24\u001b[0m arr5 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m, \u001b[38;5;241m10\u001b[39m]) \n\u001b[1;32m---> 25\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43marr3\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43marr5\u001b[49m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3) (4,) "
      ]
     }
@@ -689,7 +700,8 @@
     "print()\n",
     "\n",
     "\n",
-    "arr5 = np.array([7, 8, 9, 10])  # Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\n",
+    "# Error : arr3의 형태 (2, 3)와 arr5의 형태 (4,)가 브로드캐스팅에 적합하지 않음\n",
+    "arr5 = np.array([7, 8, 9, 10]) \n",
     "result = arr3 + arr5\n",
     "print(result)"
    ]
